--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wbpack Exercise</title>
+    <title>OTI TASK ORGANIZER</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 </head>
 <body>
-    <h1>Hello webpack!</h1>
+    <section  class="listSection"> 
+        <div class="listsbgcolor listTitles">
+            <h1 class="">Today's To do</h1>
+            <span class="material-icons">autorenew</span>
+        </div>
+        <form class="listsbgcolor form">
+            <input type="text" id="addlist" class="addlist" value="" placeholder="Add your list...">
+            <span class="material-icons">keyboard_return</span>
+        </form>
+        <ul class="listContainers">
+            <!-- <li class="listItems listsbgcolor">Task 1</li>
+            <li class="listItems listsbgcolor">Task 1</li>
+            <li class="listItems listsbgcolor">Task 1</li> -->
+        </ul>
+        <p id="clearContainer" class="listsbgcolor">Clear all completed</p>
+    </section>    
 </body>
 </html>
