fix linter errors

--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,7 @@
             <span class="material-icons">keyboard_return</span>
         </form>
         <ul class="listContainers">
-            <!-- <li class="listItems listsbgcolor">Task 1</li>
-            <li class="listItems listsbgcolor">Task 1</li>
-            <li class="listItems listsbgcolor">Task 1</li> -->
+            <!-- loads dats from js -->
         </ul>
         <p id="clearContainer" class="listsbgcolor">Clear all completed</p>
     </section>    
