Implement Add and Remove feature

--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,13 @@
             <h1 class="">Today's To do</h1>
             <span class="material-icons">autorenew</span>
         </div>
-        <form class="listsbgcolor form">
+        <form class="listsbgcolor form" action="" method="">
             <input type="text" id="addlist" class="addlist" value="" placeholder="Add your list...">
-            <span class="material-icons">keyboard_return</span>
+            <span type="" class="material-icons">keyboard_return</span>
         </form>
-        <ul class="listContainers">
+        <form class="listContainers">
             <!-- loads dats from js -->
-        </ul>
+        </form>
         <p id="clearContainer" class="listsbgcolor">Clear all completed</p>
     </section>    
 </body>
