Implement Interactive List feature

--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,8 @@
         </form>
         <form class="listContainers">
             <!-- loads dats from js -->
-        </form>
-        <p id="clearContainer" class="listsbgcolor">Clear all completed</p>
+         </form>
+        <a id="clearContainer" class="listsbgcolor" href="javascript:void">Clear all completed</a>
     </section>    
 </body>
 </html>
